# rib-extractor

./: .gitignore  README.md  app.py  app_with_ocr.py  packages.txt  pyproject.toml  requirements.txt  rib_extractor.py  utils.py
rib/: README.md
src/: utils.py
src/app/: app.py  app_with_ocr.py  utils.py
